# rpi-vsomeip-setup

./: .gitignore  .travis.yml  CMakeLists.txt  README  bitbucket-pipelines.yml  installscript.sh
clientAkku/: CMakeLists.txt
clientLights/: CMakeLists.txt
serviceAkku/: .project  CMakeLists.txt
serviceAkku/src/: service-akku.cpp
serviceLights/: CMakeLists.txt
serviceLights/src/: service-lights.cpp
source/client/: config  control  dhcpcd.conf  installscript.sh  postinst  vsomeip.json
source/client/clientAkku/: CMakeLists.txt  client_akku.service
source/client/clientAkku/src/: client-akku.cpp
source/client/clientLights/: CMakeLists.txt  client_lights.service  installscript.sh
source/clientAkku/: CMakeLists.txt
source/clientLights/: CMakeLists.txt
source/clientLights/src/: client-lights.cpp
source/service/: config  control  dhcpcd.conf  postinst  vsomeip.json
source/service/can_challenges/: CANFrames.cpp  CANFrames.h  CANUtil.cpp  MotorECU.cpp
source/service/serviceAkku/: CMakeLists.txt  service_akku.service  service_akku_msg.json
source/service/serviceAkku/src/: service-akku.cpp
source/service/serviceLights/: CMakeLists.txt  service_lights.service  service_lights_msg.json
source/service/serviceLights/src/: service-lights.cpp
source/serviceAkku/: CMakeLists.txt.autosave
source/serviceLights/: .cproject
